improve web bundles handling

--- a/dev-mail-server-core/src/main/resources/META-INF/dms/bundles.properties
+++ b/dev-mail-server-core/src/main/resources/META-INF/dms/bundles.properties
@@ -1,13 +1,29 @@
-devmailserver.internal.bundles.vendor.classpath-prefix=/META-INF/resources/webjars/
-devmailserver.internal.bundles.vendor.css=/bootswatch/4.4.1/dist/lumen/bootstrap.min.css,\
-                                          /highlightjs/styles/default.css,
-devmailserver.internal.bundles.vendor.js=/jquery/3.4.1/jquery.min.js,\
-                                         /jquery-template/1.5.7/jquery.loadTemplate.min.js,\
-                                         /bootstrap/4.4.1/js/bootstrap.min.js,\
-                                         /eventsource/1.0.7/example/eventsource-polyfill.js,\
-                                         /momentjs/2.24.0/min/moment.min.js,\
-                                         /highlightjs/highlight.pack.min.js
+devmailserver.internal.bundles[0].name=vendor-css
+devmailserver.internal.bundles[0].classpath-prefix=/META-INF/resources/webjars/
+devmailserver.internal.bundles[0].type=css
+devmailserver.internal.bundles[0].order=1
+devmailserver.internal.bundles[0].files=/bootswatch/4.4.1/dist/lumen/bootstrap.min.css,\
+                                        /highlightjs/styles/default.css
+                                          
+devmailserver.internal.bundles[1].name=vendor-js
+devmailserver.internal.bundles[1].classpath-prefix=/META-INF/resources/webjars/
+devmailserver.internal.bundles[1].type=js
+devmailserver.internal.bundles[1].order=1
+devmailserver.internal.bundles[1].files=/jquery/3.4.1/jquery.min.js,\
+                                        /jquery-template/1.5.7/jquery.loadTemplate.min.js,\
+                                        /bootstrap/4.4.1/js/bootstrap.min.js,\
+                                        /eventsource/1.0.7/example/eventsource-polyfill.js,\
+                                        /momentjs/2.24.0/min/moment.min.js,\
+                                        /highlightjs/highlight.pack.min.js
 
-devmailserver.internal.bundles.app.classpath-prefix=/META-INF/dms/
-devmailserver.internal.bundles.app.css=/css/index.css
-devmailserver.internal.bundles.app.js=/js/index.js
+devmailserver.internal.bundles[2].name=app-css
+devmailserver.internal.bundles[2].classpath-prefix=/META-INF/dms/
+devmailserver.internal.bundles[2].type=css
+devmailserver.internal.bundles[2].order=2
+devmailserver.internal.bundles[2].files=/css/index.css
+
+devmailserver.internal.bundles[3].name=app-js
+devmailserver.internal.bundles[3].classpath-prefix=/META-INF/dms/
+devmailserver.internal.bundles[3].type=js
+devmailserver.internal.bundles[3].order=2
+devmailserver.internal.bundles[3].files=/js/index.js
