--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = "dev-mail-server"
 
 include "dev-mail-server-app"
 include "dev-mail-server-core"
+include "dev-mail-server-frontend"
