--- a/dev-mail-server-app/build.gradle
+++ b/dev-mail-server-app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
-    id "application"
+    id "java"
+    id "org.springframework.boot" version "2.2.6.RELEASE"
 }
 
 description = "DevMailServer :: App"
+sourceCompatibility = "11"
 
 configurations {
     developmentOnly
@@ -13,9 +15,16 @@ configurations {
 
 dependencies {
     runtimeOnly project(":dev-mail-server-core")
+    
+    implementation "org.slf4j:slf4j-api"
+    implementation "ch.qos.logback:logback-classic"
     //implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter"
     implementation "org.springframework.boot:spring-boot-starter-web"
     //implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
+}
+
+bootJar {
+    mainClassName = "org.abelk.devmailserver.DevMailServerApplication"
 }
