correctly set core jar task frontend dependency & fix clean

--- a/dev-mail-server-core/build.gradle
+++ b/dev-mail-server-core/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 }
 
 jar {
+    dependsOn ":dev-mail-server-frontend:assemble"
     from (configurations.frontend.files) {
         into "META-INF/dms-frontend"
     }
