--- a/dev-mail-server-app/build.gradle
+++ b/dev-mail-server-app/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "jakarta.mail:jakarta.mail-api" // TODO remove
+    implementation "org.springframework:spring-context-support" // TODO remove
     //implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 
