add mails history support & refactor

--- a/dev-mail-server-app/build.gradle
+++ b/dev-mail-server-app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "jakarta.mail:jakarta.mail-api" // TODO remove
+    implementation "com.sun.mail:jakarta.mail" // TODO remove
     implementation "org.springframework:spring-context-support" // TODO remove
     //implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
