--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id "io.spring.dependency-management" version "1.0.9.RELEASE" apply false
+    id "org.owasp.dependencycheck" version "6.0.2"
 }
 
 description = "DevMailServer :: Root"
