update boot, gradle and simplify app config

--- a/dev-mail-server-app/build.gradle
+++ b/dev-mail-server-app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.2.6.RELEASE"
+    id "org.springframework.boot" version "${springBootVersion}"
 }
 
 description = "DevMailServer :: App"
@@ -18,14 +18,12 @@ dependencies {
     
     implementation "org.slf4j:slf4j-api"
     implementation "ch.qos.logback:logback-classic"
-    //implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter"
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "jakarta.mail:jakarta.mail-api" // TODO remove
     implementation "com.sun.mail:jakarta.mail" // TODO remove
     implementation "org.springframework:spring-context-support" // TODO remove
-    //implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 
     compileOnly "org.projectlombok:lombok"
