pause on adding backend tests

--- a/dev-mail-server-app/build.gradle
+++ b/dev-mail-server-app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 description = "DevMailServer :: App"
-sourceCompatibility = "11"
+sourceCompatibility = "${sourceCompatibility}"
 
 configurations {
     developmentOnly
