--- a/versions.gradle
+++ b/versions.gradle
@@ -5,5 +5,7 @@ dependencyManagement {
     dependencies {
         dependency "org.subethamail:subethasmtp:3.1.7"
         dependency "commons-io:commons-io:2.6"
+        dependency "org.testng:testng:7.4.0"
+        dependency "org.mockito:mockito-testng:0.4.13"
     }
 }
