finish backend tests

--- a/dev-mail-server-core/build.gradle
+++ b/dev-mail-server-core/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation "org.testng:testng"
     testImplementation "org.mockito:mockito-core"
     testImplementation "org.mockito:mockito-testng"
+    testCompileOnly "org.projectlombok:lombok"
 
     annotationProcessor "org.projectlombok:lombok"
 }
