--- a/mailspy-app/build.gradle
+++ b/mailspy-app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
 }
 
 bootJar {
-    mainClassName = "org.xylan.mailspy.MailSpyApplication"
+    mainClassName = "org.xylan.mailspy.app.MailSpyApplication"
 }
