--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id "io.spring.dependency-management" version "1.0.10.RELEASE" apply false
     id "org.owasp.dependencycheck" version "6.0.3"
+    id "com.coditory.integration-test" version "1.3.0" apply false
 }
 
 description = "MailSpy :: Root"
