--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,19 @@
 plugins {
-    id "io.spring.dependency-management" version "1.0.10.RELEASE" apply false
-    id "org.owasp.dependencycheck" version "6.0.3"
-    id "com.coditory.integration-test" version "1.3.0" apply false
+    alias libs.plugins.owasp.dependencycheck
 }
-
 description = "MailSpy :: Root"
 
 wrapper {
-    gradleVersion = "6.7.1"
-}
-
-repositories {
-	mavenCentral()
+    gradleVersion = "7.3.3"
 }
 
 allprojects {
-    group = "org.abelk"
+    group = "org.xylan.mailspy"
     version = "1.0.0-SNAPSHOT"
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
-}
-
-subprojects {
-    apply plugin: "eclipse"
-    apply plugin: "io.spring.dependency-management"
-    
-    apply from: "$rootDir/versions.gradle"
 }
 
 dependencyCheck {
