remove security support for now

--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,5 @@ allprojects {
 }
 
 dependencyCheck {
-	suppressionFile "${rootDir}/owasp/suppressions.xml"
+	suppressionFile "$rootDir/owasp/suppressions.xml"
 }
