add all test tasks to check

--- a/mailspy-core/build.gradle
+++ b/mailspy-core/build.gradle
@@ -54,6 +54,10 @@ publishing {
     }
 }
 
+check {
+    dependsOn tasks.withType(Test)
+}
+
 tasks.withType(Test) {
     useTestNG()
     testLogging {
