--- a/settings.gradle
+++ b/settings.gradle
@@ -9,22 +9,22 @@ enableFeaturePreview("VERSION_CATALOGS")
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            version("spring-framework", "5.3.13")
-            version("spring-boot", "2.4.0")
-            version("slf4j", "1.7.32")
+            version("spring-framework", "5.3.17")
+            version("spring-boot", "2.6.5")
+            version("slf4j", "1.7.36")
             version("subetha", "3.1.7")
             version("commons-io", "2.6")
             version("jakarta-servletapi", "4.0.4")
             version("jakarta-annotationsapi", "1.3.5")
             version("lombok", "1.18.22")
             version("testng", "7.4.0")
-            version("mockito", "3.6.28")
+            version("mockito", "4.0.0")
             version("mockito-testng", "0.4.13")
-            version("logback", "1.2.7")
-            version("assertj", "3.18.1")
+            version("logback", "1.2.11")
+            version("assertj", "3.21.0")
             version("hamcrest", "2.2")
-            version("json-path", "2.4.0")
-            version("jackson", "2.11.4")
+            version("json-path", "2.6.0")
+            version("jackson", "2.13.2")
             version("owasp-dependencycheck", "6.0.3")
             version("coditory-integrationtest", "1.3.0")
             version("nebula-optionalbase", "7.0.0")
@@ -74,6 +74,8 @@ dependencyResolutionManagement {
                 .to("com.jayway.jsonpath", "json-path").versionRef("json-path")
             alias("jackson-databind")
                 .to("com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
+            alias("jackson-datatype-jsr310")
+                .to("com.fasterxml.jackson.datatype", "jackson-datatype-jsr310").versionRef("jackson")
 
             alias("owasp-dependencycheck")
                 .toPluginId("org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
