update to gradle 7.4.1

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,6 @@ include "mailspy-app"
 include "mailspy-core"
 include "mailspy-frontend"
 
-enableFeaturePreview("VERSION_CATALOGS")
-
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
@@ -30,63 +28,35 @@ dependencyResolutionManagement {
             version("nebula-optionalbase", "7.0.0")
             version("siouan-frontend", "6.0.0")
 
-            alias("spring-boot-autoconfigure")
-                .to("org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
-            alias("spring-boot-test")
-                .to("org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
-            alias("spring-boot-devtools")
-                .to("org.springframework.boot", "spring-boot-devtools").versionRef("spring-boot")
-            alias("spring-boot-starter-base")
-                .to("org.springframework.boot", "spring-boot-starter").versionRef("spring-boot")
-            alias("spring-boot-starter-web")
-                .to("org.springframework.boot", "spring-boot-starter-web").versionRef("spring-boot")
-            alias("spring-context-support")
-                .to("org.springframework", "spring-context-support").versionRef("spring-framework")
-            alias("spring-webmvc")
-                .to("org.springframework", "spring-webmvc").versionRef("spring-framework")
-            alias("spring-test")
-                .to("org.springframework", "spring-test").versionRef("spring-framework")
-            alias("slf4j-api")
-                .to("org.slf4j", "slf4j-api").versionRef("slf4j")
-            alias("subetha")
-                .to("org.subethamail", "subethasmtp").versionRef("subetha")
-            alias("apache-commons-io")
-                .to("commons-io", "commons-io").versionRef("commons-io")
-            alias("jakarta-servletapi")
-                .to("jakarta.servlet", "jakarta.servlet-api").versionRef("jakarta-servletapi")
-            alias("jakarta-annotationsapi")
-                .to("jakarta.annotation", "jakarta.annotation-api").versionRef("jakarta-annotationsapi")
-            alias("lombok")
-                .to("org.projectlombok", "lombok").versionRef("lombok")
-            alias("testng")
-                .to("org.testng", "testng").versionRef("testng")
-            alias("mockito-core")
-                .to("org.mockito", "mockito-core").versionRef("mockito")
-            alias("mockito-testng")
-                .to("org.mockito", "mockito-testng").versionRef("mockito-testng")
-            alias("logback-classic")
-                .to("ch.qos.logback", "logback-classic").versionRef("logback")
-            alias("assertj-core")
-                .to("org.assertj", "assertj-core").versionRef("assertj")
-            alias("hamcrest")
-                .to("org.hamcrest", "hamcrest").versionRef("hamcrest")
-            alias("jsonpath")
-                .to("com.jayway.jsonpath", "json-path").versionRef("json-path")
-            alias("jackson-databind")
-                .to("com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
-            alias("jackson-datatype-jsr310")
-                .to("com.fasterxml.jackson.datatype", "jackson-datatype-jsr310").versionRef("jackson")
+            library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
+            library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
+            library("spring-boot-devtools", "org.springframework.boot", "spring-boot-devtools").versionRef("spring-boot")
+            library("spring-boot-starter-base", "org.springframework.boot", "spring-boot-starter").versionRef("spring-boot")
+            library("spring-boot-starter-web", "org.springframework.boot", "spring-boot-starter-web").versionRef("spring-boot")
+            library("spring-context-support", "org.springframework", "spring-context-support").versionRef("spring-framework")
+            library("spring-webmvc", "org.springframework", "spring-webmvc").versionRef("spring-framework")
+            library("spring-test", "org.springframework", "spring-test").versionRef("spring-framework")
+            library("slf4j-api", "org.slf4j", "slf4j-api").versionRef("slf4j")
+            library("subetha", "org.subethamail", "subethasmtp").versionRef("subetha")
+            library("apache-commons-io", "commons-io", "commons-io").versionRef("commons-io")
+            library("jakarta-servletapi", "jakarta.servlet", "jakarta.servlet-api").versionRef("jakarta-servletapi")
+            library("jakarta-annotationsapi", "jakarta.annotation", "jakarta.annotation-api").versionRef("jakarta-annotationsapi")
+            library("lombok", "org.projectlombok", "lombok").versionRef("lombok")
+            library("testng", "org.testng", "testng").versionRef("testng")
+            library("mockito-core", "org.mockito", "mockito-core").versionRef("mockito")
+            library("mockito-testng", "org.mockito", "mockito-testng").versionRef("mockito-testng")
+            library("logback-classic", "ch.qos.logback", "logback-classic").versionRef("logback")
+            library("assertj-core", "org.assertj", "assertj-core").versionRef("assertj")
+            library("hamcrest", "org.hamcrest", "hamcrest").versionRef("hamcrest")
+            library("jsonpath", "com.jayway.jsonpath", "json-path").versionRef("json-path")
+            library("jackson-databind", "com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
+            library("jackson-datatype-jsr310", "com.fasterxml.jackson.datatype", "jackson-datatype-jsr310").versionRef("jackson")
 
-            alias("owasp-dependencycheck")
-                .toPluginId("org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
-            alias("coditory-integrationtest")
-                .toPluginId("com.coditory.integration-test").versionRef("coditory-integrationtest")
-            alias("nebula-optionalbase")
-                .toPluginId("nebula.optional-base").versionRef("nebula-optionalbase")
-            alias("spring-boot-plugin")
-                .toPluginId("org.springframework.boot").versionRef("spring-boot")
-            alias("siouan-frontend")
-                .toPluginId("org.siouan.frontend-jdk11").versionRef("siouan-frontend")
+            plugin("owasp-dependencycheck", "org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
+            plugin("coditory-integrationtest", "com.coditory.integration-test").versionRef("coditory-integrationtest")
+            plugin("nebula-optionalbase", "nebula.optional-base").versionRef("nebula-optionalbase")
+            plugin("spring-boot-plugin", "org.springframework.boot").versionRef("spring-boot")
+            plugin("siouan-frontend", "org.siouan.frontend-jdk11").versionRef("siouan-frontend")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
