--- a/mailspy-app/build.gradle
+++ b/mailspy-app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 description = "MailSpy :: App"
-sourceCompatibility = "${sourceCompatibility}"
+sourceCompatibility = "$sourceCompatibility"
 
 dependencies {
     runtimeOnly project(":mailspy-core")
