--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 description = "MailSpy :: Root"
 
 wrapper {
-    gradleVersion = "7.4.1"
+    gradleVersion = libs.versions.gradle.get()
 }
 
 allprojects {
@@ -14,10 +14,6 @@ allprojects {
 
     repositories {
         mavenCentral()
-    }
-
-    tasks.withType(JavaCompile) {
-        options.release = 11
     }
 }
 
@@ -28,9 +24,16 @@ subprojects {
             configFile file("$rootDir/config/checkstyle.xml")
             toolVersion = libs.versions.checkstyle.get()
         }
+
+        tasks.withType(JavaCompile) {
+            options.release = 11
+        }
     }
 }
 
 dependencyCheck {
     suppressionFile "$rootDir/config/owasp-suppressions.xml"
+    analyzers {
+        assemblyEnabled = false
+    }
 }
