--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include "mailspy-frontend"
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
+            version("gradle", "7.4.1")
             version("spring-framework", "5.3.17")
             version("spring-boot", "2.6.5")
             version("slf4j", "1.7.36")
@@ -23,7 +24,7 @@ dependencyResolutionManagement {
             version("hamcrest", "2.2")
             version("json-path", "2.6.0")
             version("jackson", "2.13.2")
-            version("owasp-dependencycheck", "6.0.3")
+            version("owasp-dependencycheck", "7.1.0.1")
             version("coditory-integrationtest", "1.3.0")
             version("nebula-optionalbase", "7.0.0")
             version("siouan-frontend", "6.0.0")
