--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ dependencyResolutionManagement {
             version("nebula-optionalbase", "7.0.0")
             version("siouan-frontend", "6.0.0")
             version("checkstyle", "10.1")
+            version("pmd", "6.44.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
