add and apply prettier

--- a/mailspy-frontend/tsconfig.json
+++ b/mailspy-frontend/tsconfig.json
@@ -1,36 +1,25 @@
 {
-  "compilerOptions": {
-    "types": [
-      "node",
-      "reflect-metadata",
-      "jest"
-    ],
-    "esModuleInterop": true,
-    "baseUrl": "./src",
-    "jsx": "react-jsx",
-    "target": "es5",
-    "lib": [
-      "es6",
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "strictNullChecks": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  },
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+        "types": ["node", "reflect-metadata", "jest"],
+        "esModuleInterop": true,
+        "baseUrl": "./src",
+        "jsx": "react-jsx",
+        "target": "es5",
+        "lib": ["es6", "dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "strictNullChecks": false,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
+    },
+    "include": ["src"]
 }
